--- a/src/main/resources/templates/update-form.mustache
+++ b/src/main/resources/templates/update-form.mustache
@@ -1,9 +1,9 @@
 {{> layout/header}}
 
 <section>
-    <form action="/board/1/update" method="post" enctype="application/x-www-form-urlencoded">
-        <input type="text" name="title" value="제목1"><br>
-        <input type="text" name="content" value="내용1"><br>
+    <form action="/board/{{model.id}}/update" method="post" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="title" value="{{model.title}}"><br>
+        <input type="text" name="content" value="{{model.content}}"><br>
         <button type="submit">글수정</button>
     </form>
 </section>
